--- a/notebooks/1-anomalies-gan.ipynb
+++ b/notebooks/1-anomalies-gan.ipynb
@@ -61,6 +61,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2021-02-01 17:10:53--  https://raw.githubusercontent.com/HSE-LAMBDA/OpenTalks2021_tutorial/main/data/MAGIC/magic04.data\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.48.133\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.48.133|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 1477391 (1.4M) [text/plain]\n",
+      "Saving to: ‘magic04.data.1’\n",
+      "\n",
+      "magic04.data.1      100%[===================>]   1.41M  --.-KB/s    in 0.06s   \n",
+      "\n",
+      "2021-02-01 17:10:53 (25.1 MB/s) - ‘magic04.data.1’ saved [1477391/1477391]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "! wget https://raw.githubusercontent.com/HSE-LAMBDA/OpenTalks2021_tutorial/main/data/MAGIC/magic04.data"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -196,7 +223,7 @@
    ],
    "source": [
     "# read data\n",
-    "data = pd.read_csv(\"../data/MAGIC/magic04.data\", header=None)\n",
+    "data = pd.read_csv(\"magic04.data\", header=None)\n",
     "data.head()"
    ]
   },
